// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid should be not edidable 1`] = `
<div class="form-group">
  <label></label>
  <div class="liferay-ddm-form-field-grid table-responsive">
    <table class="table table-autofit table-list table-striped">
      <thead>
        <tr>
          <th></th>
          <th>col1</th>
        </tr>
      </thead>
      <tbody>
        <tr name="jehf">
          <td>row</td>
          <td>
            <input class="form-builder-grid-field" data-row-index="0" name="jehf" type="radio" value="fieldId">
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <span class="form-text"></span>
</div>
`;

exports[`Grid should have a helpText 1`] = `
<div class="form-group">
  <label></label>
  <div class="liferay-ddm-form-field-grid table-responsive">
    <table class="table table-autofit table-list table-striped">
      <thead>
        <tr>
          <th></th>
          <th>col1</th>
        </tr>
      </thead>
      <tbody>
        <tr name="jehf">
          <td>row</td>
          <td>
            <input class="form-builder-grid-field" data-row-index="0" name="jehf" type="radio" value="fieldId">
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <span class="form-text">Type something</span>
</div>
`;

exports[`Grid should have a label 1`] = `
<div class="form-group">
  <label>label </label>
  <div class="liferay-ddm-form-field-grid table-responsive">
    <table class="table table-autofit table-list table-striped">
      <thead>
        <tr>
          <th></th>
          <th>col1</th>
        </tr>
      </thead>
      <tbody>
        <tr name="jehf">
          <td>row</td>
          <td>
            <input class="form-builder-grid-field" data-row-index="0" name="jehf" type="radio" value="fieldId">
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <span class="form-text"></span>
</div>
`;

exports[`Grid should have a spritemap 1`] = `
<div class="form-group">
  <label></label>
  <div class="liferay-ddm-form-field-grid table-responsive">
    <table class="table table-autofit table-list table-striped">
      <thead>
        <tr>
          <th></th>
          <th>col1</th>
        </tr>
      </thead>
      <tbody>
        <tr name="jehf">
          <td>row</td>
          <td>
            <input class="form-builder-grid-field" data-row-index="0" name="jehf" type="radio" value="fieldId">
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <span class="form-text"></span>
</div>
`;

exports[`Grid should have an id 1`] = `
<div class="form-group">
  <label for="ID"></label>
  <div class="liferay-ddm-form-field-grid table-responsive">
    <table class="table table-autofit table-list table-striped">
      <thead>
        <tr>
          <th></th>
          <th>col1</th>
        </tr>
      </thead>
      <tbody>
        <tr name="jehf">
          <td>row</td>
          <td>
            <input class="form-builder-grid-field" data-row-index="0" name="jehf" type="radio" value="fieldId">
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <span class="form-text"></span>
</div>
`;

exports[`Grid should not be required 1`] = `
<div class="form-group">
  <label></label>
  <div class="liferay-ddm-form-field-grid table-responsive">
    <table class="table table-autofit table-list table-striped">
      <thead>
        <tr>
          <th></th>
          <th>col1</th>
        </tr>
      </thead>
      <tbody>
        <tr name="jehf">
          <td>row</td>
          <td>
            <input class="form-builder-grid-field" data-row-index="0" name="jehf" type="radio" value="fieldId">
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <span class="form-text"></span>
</div>
`;

exports[`Grid should render Label if showLabel is true 1`] = `
<div class="form-group">
  <label>text </label>
  <div class="liferay-ddm-form-field-grid table-responsive">
    <table class="table table-autofit table-list table-striped">
      <thead>
        <tr>
          <th></th>
          <th>col1</th>
        </tr>
      </thead>
      <tbody>
        <tr name="jehf">
          <td>row</td>
          <td>
            <input class="form-builder-grid-field" data-row-index="0" name="jehf" type="radio" value="fieldId">
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <span class="form-text"></span>
</div>
`;

exports[`Grid should render columns 1`] = `
<div class="form-group">
  <label></label>
  <div class="liferay-ddm-form-field-grid table-responsive">
    <table class="table table-autofit table-list table-striped">
      <thead>
        <tr>
          <th></th>
          <th>col1</th>
          <th>col2</th>
        </tr>
      </thead>
      <tbody>
        <tr name="jehf">
          <td>row</td>
          <td>
            <input class="form-builder-grid-field" data-row-index="0" name="jehf" type="radio" value="fieldId">
          </td>
          <td>
            <input class="form-builder-grid-field" data-row-index="1" name="jehf" type="radio" value="fieldId">
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <span class="form-text"></span>
</div>
`;

exports[`Grid should render no columns when columns comes empty 1`] = `
<div class="form-group">
  <label></label>
  <div class="liferay-ddm-form-field-grid table-responsive">
    <table class="table table-autofit table-list table-striped">
      <thead>
        <tr>
          <th></th>
        </tr>
      </thead>
      <tbody>
        <tr name="jehf">
          <td>row</td>
        </tr>
      </tbody>
    </table>
  </div>
  <span class="form-text"></span>
</div>
`;

exports[`Grid should render no rows when row comes empty 1`] = `
<div class="form-group">
  <label></label>
  <div class="liferay-ddm-form-field-grid table-responsive">
    <table class="table table-autofit table-list table-striped">
      <thead>
        <tr>
          <th></th>
          <th>col1</th>
        </tr>
      </thead>
      <tbody></tbody>
    </table>
  </div>
  <span class="form-text"></span>
</div>
`;

exports[`Grid should render rows 1`] = `
<div class="form-group">
  <label></label>
  <div class="liferay-ddm-form-field-grid table-responsive">
    <table class="table table-autofit table-list table-striped">
      <thead>
        <tr>
          <th></th>
          <th>col1</th>
        </tr>
      </thead>
      <tbody>
        <tr name="fieldId">
          <td>row1</td>
          <td>
            <input class="form-builder-grid-field" data-row-index="0" name="fieldId" type="radio" value="fieldId">
          </td>
        </tr>
        <tr name="fieldId">
          <td>row2</td>
          <td>
            <input class="form-builder-grid-field" data-row-index="0" name="fieldId" type="radio" value="fieldId">
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <span class="form-text"></span>
</div>
`;
